--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ARI.IO Gateway Explorer – Decentralized platform to explore, visualize and analyze AR.IO network gateways."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="keywords" content="AR.IO, Gateway Explorer, Arweave, Decentralized Storage, Web3, Nodes, Network Visualization" />
+    <meta property="og:title" content="ARI.IO Gateway Explorer" />
+    <meta property="og:description" content="Explore and analyze AR.IO network gateways around the world." />
+    <meta property="og:image" content="/logo512.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://gateway-explorer.ar.io" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ARI.IO Gateway Explorer" />
+    <meta name="twitter:description" content="Explore and analyze AR.IO network gateways around the world." />
+    <meta name="twitter:image" content="/logo512.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,7 +34,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <title>ARI.IO Gateway Explorer</title>
+    <script defer src="/static/js/bundle.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
