--- a/public/index.html
+++ b/public/index.html
@@ -51,5 +51,35 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      // Analytics initialization - just copy this entire script tag to any project
+      (function() {
+        // Configuration
+        const ANALYTICS_CONFIG = {
+          src: 'https://analytics_arlink.ar.io/browser.js',
+          processId: 'TTu3KQnXHo6wj0Z_7Vbo5VpXYPVvwJH1xzl3_nRxD64',
+          trackUrlHashes: true,
+          debug: false
+        };
+
+        // Wait for DOM to be ready
+        function init() {
+          const script = document.createElement('script');
+          script.type = 'module';
+          script.src = ANALYTICS_CONFIG.src;
+          script.setAttribute('data-process-id', ANALYTICS_CONFIG.processId);
+          script.setAttribute('data-track-url-hashes', ANALYTICS_CONFIG.trackUrlHashes);
+          script.setAttribute('data-debug', ANALYTICS_CONFIG.debug);
+          document.body.appendChild(script);
+        }
+
+        // Handle different loading states
+        if (document.readyState === 'loading') {
+          document.addEventListener('DOMContentLoaded', init);
+        } else {
+          init();
+        }
+      })();
+    </script>
   </body>
 </html>
