--- a/public/index.html
+++ b/public/index.html
@@ -12,14 +12,14 @@
     <meta name="keywords" content="AR.IO, Gateway Explorer, Arweave, Decentralized Storage, Web3, Nodes, Network Visualization" />
     <meta property="og:title" content="ARI.IO Gateway Explorer" />
     <meta property="og:description" content="Explore and analyze AR.IO network gateways around the world." />
-    <meta property="og:image" content="/logo512.png" />
+    <meta property="og:image" content="/logo.svg" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://gateway-explorer.ar.io" />
+    <meta property="og:url" content="https://gatewayexplorer.ar.io" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ARI.IO Gateway Explorer" />
     <meta name="twitter:description" content="Explore and analyze AR.IO network gateways around the world." />
-    <meta name="twitter:image" content="/logo512.png" />
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <meta name="twitter:image" content="/logo.svg" />
+    <link rel="apple-touch-icon" href="/logo.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
