--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <link href="https://fonts.googleapis.com/css?family=Rubik:400,500,700&display=swap" rel="stylesheet">
     <title>ARI.IO Gateway Explorer</title>
     <script defer src="/static/js/bundle.js"></script>
   </head>
